# saju

./: .gitignore  .rules  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
crates/saju-cli/: Cargo.toml
crates/saju-cli/src/: main.rs
crates/saju-cli/tests/: cli_test.rs
crates/saju-lib/: Cargo.toml
crates/saju-lib/src/: astro.rs  bazi.rs  i18n.rs  lib.rs  location.rs  luck.rs  lunar.rs  service.rs  timezone.rs  types.rs
crates/saju-lib/tests/: service_test.rs
crates/saju-web/: Cargo.toml
crates/saju-web/src/: handlers.rs  main.rs  templates.rs
crates/saju-web/static/css/: style.css
crates/saju-web/templates/: index.html
crates/saju-web/templates/fragments/: error.html  result.html
crates/saju-web/tests/: web_test.rs
src/: bazi.rs  lib.rs  location.rs  luck.rs  main.rs  types.rs
