[package]
name = "saju-web"
version = "0.1.0"
edition = "2021"

[dependencies]
saju-lib = { path = "../saju-lib" }
axum = "0.8"
askama = "0.12"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4.38"
